fix story text on mobile

--- a/about/style.css
+++ b/about/style.css
@@ -1,3 +1,13 @@
+#story {
+    margin: 1em;
+}
+
+@media only screen and (max-width: 490px) {
+   #story img {
+        margin-right: 10em;
+   }
+}
+
 #story img {
     padding-right: 2em;
     padding-bottom: 2em;
